--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,4 +1,5 @@
 name: Build and Test
+# only style tests
 
 on:
   push:
@@ -7,9 +8,8 @@ on:
 
 jobs:
 
-  test_with_pytest:
+  Style test:
     runs-on: ubuntu-latest
-    continue-on-error: true
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
@@ -19,25 +19,16 @@ jobs:
       run: |
         python3 -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Test student program
-      id: test
-      run: python3 -m pytest tests/my_test.py >> .github/ISSUE_TEMPLATE/test-failure.md
-    - name: Failure message
-      if: failure()
-      uses: machine-learning-apps/pr-comment@1.0.0
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        path: .github/ISSUE_TEMPLATE/test-failure.md
 
     - name: Lint student program
       id: style
-      if: steps.test.outcome == 'success'
       continue-on-error: true
-      run: flake8 src/my_code.py >> .github/ISSUE_TEMPLATE/style-issues.md
+      run:
+      - flake8 src/fix_code_1.py >> .github/ISSUE_TEMPLATE/style-issues.md
+      - flake8 src/fix_code_2.py >> .github/ISSUE_TEMPLATE/style-issues.md
 
     - name: Style fail message
-      if: ${{ steps.test.outcome =='success' && steps.style.outcome == 'failure'}}
+      if: steps.style.outcome == 'failure'
       uses: machine-learning-apps/pr-comment@1.0.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
