--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,11 +4,15 @@ name: Build and Test
 on:
   push:
     paths:
-      - 'src/my_code.py'
-
+      - 'src/fix_code_1.py'
+      - 'src/fix_code_2.py'
+      - 'src/fix_code_3.py'
+      - 'src/write_code_1.py'
+      - 'src/write_code_2.py'
+      - 'src/write_code_3.py'
 jobs:
 
-  Style test:
+  Style_test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -23,9 +27,13 @@ jobs:
     - name: Lint student program
       id: style
       continue-on-error: true
-      run:
-      - flake8 src/fix_code_1.py >> .github/ISSUE_TEMPLATE/style-issues.md
-      - flake8 src/fix_code_2.py >> .github/ISSUE_TEMPLATE/style-issues.md
+      run: |
+        flake8 src/fix_code_1.py >> .github/ISSUE_TEMPLATE/style-issues.md
+        flake8 src/fix_code_2.py >> .github/ISSUE_TEMPLATE/style-issues.md
+        flake8 src/fix_code_3.py >> .github/ISSUE_TEMPLATE/style-issues.md
+        flake8 src/write_code_1.py >> .github/ISSUE_TEMPLATE/style-issues.md
+        flake8 src/write_code_2.py >> .github/ISSUE_TEMPLATE/style-issues.md
+        flake8 src/write_code_3.py >> .github/ISSUE_TEMPLATE/style-issues.md
 
     - name: Style fail message
       if: steps.style.outcome == 'failure'
